Task3/Deployment/service-b-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b
  namespace: testkube
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-b
  template:
    metadata:
      labels:
        app: service-b
    spec:
      containers:
        - name: service-b
          image: service-b-image:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
