Task3/Deployment/service-a-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-a
  namespace: testkube
spec:
  selector:
    app: service-a
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
