Task3/Deployment/service-b-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-b
  namespace: testkube
spec:
  selector:
    app: service-b
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
