Task3/Deployment/ingress-deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reverse-proxy
  namespace: testkube
spec:
  rules:
    - host: hello-world.info
      http:
        paths:
          - path: /service/a
            pathType: Prefix
            backend:
              service:
                name: service-a
                port:
                  number: 80
          - path: /service/b
            pathType: Prefix
            backend:
              service:
                name: service-b
                port:
                  number: 80
